mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_self_common.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_self_common.mux`
error: Cannot use 'self' in a common method
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_self_common.mux:4:5
   |
 4 |     self.x
   |     ^^^^
